updates for BUG#10780 - fixed slave I/O thread running status to No while attempting to connect